test/zinc_source/compile_errors/callables/22_arrow_lambda_annotation_mismatch.zn
// expected-error: parameter 'x' expects a compatible 'i32' value
fn main() {
    f = (x: i32) -> x + 1
    print(f(1.5))
}
